@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.2875 2009/07/29 11:03:34 joerg Exp $
+$NetBSD: CHANGES-2009,v 1.2876 2009/07/29 17:45:59 yyamano Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -3823,3 +3823,4 @@ Changes to the packages collection and infrastructure in 2009:
 	Added databases/postgresql84-plpython version 8.4.0 [adam 2009-07-29]
 	Added databases/postgresql84-pltcl version 8.4.0 [adam 2009-07-29]
 	Updated www/py-django to 1.0.3 [joerg 2009-07-29]
+	Updated devel/apache-maven to 2.2.0 [yyamano 2009-07-29]
